--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="stylesheet" href="/css/app.css" />
 		<meta name="viewport" content="width=device-width" />
+		<title>Cajetan Grill</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
