--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="stylesheet" href="/css/app.css" />
+		<link rel="stylesheet" href="/css/hero.css" />
 		<meta name="viewport" content="width=device-width" />
 		<title>Cajetan Grill</title>
 		%sveltekit.head%
