Slightly improved performance Added preloading of hero images and web fonts Changed SvelteKit preload strategy to `preload-mjs`

--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/img/favicon.png" />
+		<link rel="preload" href="/fonts/raleway.ttf" as="font" type="font/ttf" />
+		<link rel="preload" href="/fonts/futura-cond-medium-oblique.woff2" as="font" type="font/woff2" />
 		<meta name="viewport" content="width=device-width" />
 		<title>Cajetan Grill</title>
 		%sveltekit.head%
